Update langauge switching options

--- a/src/app/translation/translations/fr.json
+++ b/src/app/translation/translations/fr.json
@@ -197,7 +197,7 @@
     "leaveleave": "LEAVE"
   },
   "profile": {
-    "title": "Profile",
+    "title": "La Profile",
     "created": "Created",
     "tabs": {
       "general": "GENERAL",
