Update missing translations

--- a/src/app/translation/translations/en.json
+++ b/src/app/translation/translations/en.json
@@ -705,7 +705,8 @@
       "cancel": "Cancel",
       "update": "Update",
       "save": "Save",
-      "nodata": "No Credit Cards found."
+      "nodata": "No Credit Cards found.",
+      "expiration": "Expiration"
     }
   },
   "bill": {
