--- a/src/app/translation/translations/de.json
+++ b/src/app/translation/translations/de.json
@@ -705,7 +705,8 @@
         "cancel": "Cancel",
         "update": "Update",
         "save": "Save",
-        "nodata": "No Credit Cards found."
+        "nodata": "No Credit Cards found.",
+        "expiration": "Expiration"
       }
     },
     "bill": {
@@ -1467,4 +1468,3 @@
       }
     }
   }
-  
